# nexus-os

./: BOOT_FIXES.md  BOOT_REPAIRS.md  BOOT_STATUS.md  COMPLETE_IMPLEMENTATION_STATUS.md  FEATURES_SUMMARY.md  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  VM_RUN_FIX.md  check_multiboot.py  run.sh  structure.txt  test_boot.sh
ai_ml/: ai_ml.h
ai_ml/inference/: inference_engine.c  neural_engine.c
ai_ml/models/: cnn.c  transformer.c
ai_ml/npu/: npu_driver.c
apps/app-installer/: install.sh
apps/disk-monitor/: disk-monitor.h
apps/file-explorer/: file-explorer-advanced.c  file-explorer.c  file-explorer.h
apps/system-monitor/: system-monitor.h
apps/system-optimizer/: system-optimizer.h
apps/system-tweaks/: system-tweaks.h
apps/terminal/: README.md  terminal.c  terminal.h  terminal_animations.c  (+2 more)
config/: desktop.config  iot.config  kernel.config  mobile.config  server.config
docs/: BOOT_DIAGNOSTICS.md  BOOT_FLOW_SEQUENCE.md  COMPLETE_DOCUMENTATION.md  DEVELOPER_GUIDE.md  DEVELOPMENT_STATUS.md  DRIVERS_COMPLETE_GUIDE.md  ENHANCEMENT_ROADMAP.md  GUI_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  INCORPORATION_SUMMARY.md  NETWORK_MANAGEMENT.md  PHASE_PROGRESS.md  PROJECT_SUMMARY.md  SETUP_GUIDE.md  VIRTUALIZATION.md
gui/: CMakeLists.txt  README.md  gui.h
gui/ai-chat/: chat-interface.h  mind-panel.h  model-status.h  vision-analysis.h
gui/app-launcher/: app-launcher.c
gui/app-store/: app-store.c  app-store.h
gui/boot-manager/: CMakeLists.txt  bootconfig-model.cpp  bootconfig-model.h  main.cpp  resources.qrc  virtmode-manager.cpp  virtmode-manager.h
gui/boot-manager/qml/: EntryDialog.qml  Main.qml  Message.qml
gui/boot-splash/: boot_splash.c
gui/compositor/: compositing_manager.c  compositor.c  compositor.h  window_manager.c
gui/control-center/: control-center.c
gui/control-panel/: control-panel.c
gui/dashboard/: dashboard.c  dashboard.h
gui/desktop/: desktop.c  desktop.h  desktop_grid.c
gui/desktop-environment/: desktop-env.c  desktop-env.h
gui/display/: display_settings.c
gui/dock/: dock.c  dock.h
gui/file-manager/: file-manager.c
gui/icons/: icon_library.c  icon_library_extra.c
gui/login/: login-screen.c  login-screen.h
gui/network/: leaderboard.h  node-map.h  node-status.h
gui/notification-center/: notification-center.c  notification-center.h
gui/onboarding/: onboarding-wizard.c  onboarding-wizard.h
gui/qt-platform/: qt-nexus.h  qt-platform.h
gui/renderer/: renderer.c
gui/session/: session-manager.c  session-manager.h
gui/setup/: setup-wizard.c  setup-wizard.h
gui/start-menu/: start-menu.c  start-menu.h
gui/status-bar/: status-bar.c  status-bar.h
gui/storage/: storage-manager.c  storage-manager.h
gui/system-settings/: system-settings.c
gui/task-manager/: task-manager.c
gui/virtualization/: virt_manager_gui.c  virt_manager_gui.h  vm_manager_enhanced.c
gui/vm-manager/: main.cpp  vm-controller.cpp  vm-controller.h  vm-model.cpp  vm-model.h
gui/vm-manager/qml/: Main.qml
gui/widgets/: widget.c  widgets.h
gui/window-manager/: window-manager.c  window-manager.h
hal/: hal.h
iot/: iot.h
logs/: README.md
mobile/: mobile.h
net/: network_manager.c
platform/: platform.c  platform.h
security/: security.h  security_manager.c
tools/: QUICK_REFERENCE.md  auto-vm-boot.sh  boot_diag_capture.sh  dependency-checker.sh  desktop-installer.sh  launch-vmware.sh  nexus-advanced-vm-manager.sh  nexus-aliases.sh  nexus-quick-start.sh  nexus-vm-settings.sh  resource-sharing-config.sh  setup.sh  vm_run_diag.sh
(+204 files in other folders)
